--- a/archives/2021-02-21.md
+++ b/archives/2021-02-21.md
@@ -1,58 +1,66 @@
 # 2021-02-21
 
-共 182 条
+共 188 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sun Feb 21 2021 21:02:00 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sun Feb 21 2021 22:01:23 GMT+0800 (CST) -->
 1. [如何看待《你好，李焕英》的全球票房即将超过《神奇女侠》，进而使得贾玲成为全球世界票房最高女导演？](https://www.zhihu.com/question/444875318)
 1. [如何看待寒潮袭击美国德州：电网批发电价飙升逾百倍 多家炼油厂停产 百万家庭停电？](https://www.zhihu.com/question/444866490)
-1. [《西游记》最后为什么两个和尚要向唐僧他们收贿赂才肯把真经给他们？](https://www.zhihu.com/question/24693019)
 1. [给你30万人民币或者以下3个随机超能力你选哪个?](https://www.zhihu.com/question/445094663)
-1. [为什么说，越低调越安静的人越深不可测？](https://www.zhihu.com/question/344227616)
 1. [美剧中的外国人一顿饭只吃了个三明治就行了，他们饭量真的那么小吗？](https://www.zhihu.com/question/27162329)
 1. [月薪一万真的很简单吗?](https://www.zhihu.com/question/438452552)
+1. [为什么说，越低调越安静的人越深不可测？](https://www.zhihu.com/question/344227616)
 1. [如何看待女子上台殴打迪士尼剧场演员，还大骂「你这个猪，不配当中国人」？](https://www.zhihu.com/question/445582442)
 1. [人造钻石和天然钻石几乎没有差别，可以量产，为何钻石价格没有降？](https://www.zhihu.com/question/429418221)
 1. [你的车被一个醉酒驾驶的人追尾了，前提是没有人受伤，你会和他私了吗？](https://www.zhihu.com/question/318040670)
+1. [《西游记》最后为什么两个和尚要向唐僧他们收贿赂才肯把真经给他们？](https://www.zhihu.com/question/24693019)
 1. [如何看待走红四年后范小勤告别「小马云」身份：四年级仍不会简单加减法？](https://www.zhihu.com/question/445376514)
 1. [有没有发给男朋友的表情包？很作的的那种？](https://www.zhihu.com/question/403930549)
 1. [老公的父亲重病想抱孙子，但家里经济条件不允许怎么办?](https://www.zhihu.com/question/445388727)
-1. [同是外国爱豆，为什么 Amber 去了《创四》现场，Lisa 只能上网课？](https://www.zhihu.com/question/444598356)
 1. [地球还剩多少油？](https://www.zhihu.com/question/439341330)
-1. [如何评价电影《你好，李焕英》中张小斐的演技？](https://www.zhihu.com/question/444445938)
+1. [同是外国爱豆，为什么 Amber 去了《创四》现场，Lisa 只能上网课？](https://www.zhihu.com/question/444598356)
 1. [中国人均 GDP 连续两年超 1 万美元，意味着什么？](https://www.zhihu.com/question/445350752)
+1. [有没有可以笑上一年的笑话？](https://www.zhihu.com/question/437311484)
 1. [住别墅好还是高层平层好呢？](https://www.zhihu.com/question/436871543)
+1. [如何评价电影《你好，李焕英》中张小斐的演技？](https://www.zhihu.com/question/444445938)
+1. [电视剧《赘婿》宁毅与乌家的岁布战没怎么看懂，可以细致分析一下吗？](https://www.zhihu.com/question/444757339)
 1. [《青春有你 3》这次是不是也要吊打《创造营 2021》啦？](https://www.zhihu.com/question/445097943)
 1. [如何评价二里头遗址陶簋上的考古修补符号，被国博李维明先生当成古文字研究并发表论文?](https://www.zhihu.com/question/445149358)
-1. [有没有可以笑上一年的笑话？](https://www.zhihu.com/question/437311484)
-1. [电视剧《赘婿》宁毅与乌家的岁布战没怎么看懂，可以细致分析一下吗？](https://www.zhihu.com/question/444757339)
 1. [如何看出女生慢慢不喜欢你了？](https://www.zhihu.com/question/431864798)
+1. [如何看待《博人传》55话鸣人失去九尾？](https://www.zhihu.com/question/445233652)
 1. [考上编制是一种怎样的体验？](https://www.zhihu.com/question/64229374)
 1. [为什么那么多人喜欢苹果电脑？](https://www.zhihu.com/question/444684731)
-1. [如何看待英国最高法院裁定uber司机归类为正式员工，享受最低工资带薪休假等权利？](https://www.zhihu.com/question/445346257)
-1. [热火 96:94 险胜湖人，巴特勒 24 分詹姆斯 19 分，如何评价这场比赛？](https://www.zhihu.com/question/445521171)
+1. [极致收纳的家是什么样的？](https://www.zhihu.com/question/331434969)
 1. [小县城的孩子如果想要到大城市过上更好的生活该要多努力？](https://www.zhihu.com/question/64127574)
 1. [为什么现在的牛奶，奶味儿变淡了？](https://www.zhihu.com/question/444542708)
-1. [极致收纳的家是什么样的？](https://www.zhihu.com/question/331434969)
 1. [一百二十斤如何在一个月瘦到一百斤？](https://www.zhihu.com/question/412419045)
-1. [21 考研调剂政策有重大变化：禁止跨门类调剂，你怎么看？](https://www.zhihu.com/question/438836613)
+1. [当你的上级领导请更上级领导吃饭，也邀请了你，你该不该去买单呢？](https://www.zhihu.com/question/440020824)
 1. [如何看待AK刘彰在《创造营2021》第一期中道歉？](https://www.zhihu.com/question/444905869)
-1. [后悔大学谈恋爱吗？](https://www.zhihu.com/question/441071204)
-1. [《青春有你 3》和《创造营 2021》哪个更值得追？](https://www.zhihu.com/question/444989211)
 1. [折叠屏手机到底能不能给你带来「真香」的体验？](https://www.zhihu.com/question/445220917)
+1. [从什么时候起开始明白不能远嫁？](https://www.zhihu.com/question/445225135)
+1. [21 考研调剂政策有重大变化：禁止跨门类调剂，你怎么看？](https://www.zhihu.com/question/438836613)
+1. [有哪些考研需要避开的坑?](https://www.zhihu.com/question/334518238)
+1. [《青春有你 3》和《创造营 2021》哪个更值得追？](https://www.zhihu.com/question/444989211)
+1. [后悔大学谈恋爱吗？](https://www.zhihu.com/question/441071204)
+1. [有什么事是你到了复旦才知道的？](https://www.zhihu.com/question/296643677)
+1. [假如你来写《斗罗大陆 5》你会怎么写？](https://www.zhihu.com/question/429101615)
+1. [心情不好时你会怎么办？](https://www.zhihu.com/question/443480569)
+1. [如何忘掉一个爱了很久的女孩子？](https://www.zhihu.com/question/441164928)
 1. [如何在面试中回答「你最大的缺点是什么」？](https://www.zhihu.com/question/20887129)
+1. [如果能见到你最喜欢的作家，你会干什么？](https://www.zhihu.com/question/400248000)
+1. [硕士论文写不出来，严重焦虑，怎么办？](https://www.zhihu.com/question/437644547)
+1. [男生让女生最心动的瞬间是什么？](https://www.zhihu.com/question/308303577)
 1. [为什么有人会认为《原神》用日配更好？](https://www.zhihu.com/question/421637124)
+1. [考研英语只背单词+死磕真题可以吗？](https://www.zhihu.com/question/271290200)
+1. [如何看待英国最高法院裁定uber司机归类为正式员工，享受最低工资带薪休假等权利？](https://www.zhihu.com/question/445346257)
+1. [高中生怎么才能快乐？](https://www.zhihu.com/question/444888990)
+1. [热火 96:94 险胜湖人，巴特勒 24 分詹姆斯 19 分，如何评价这场比赛？](https://www.zhihu.com/question/445521171)
 1. [你收藏过最催泪的文案是哪个？](https://www.zhihu.com/question/439917084)
 1. [如何评价员工回家过年拒带电脑工作被开除？](https://www.zhihu.com/question/445199587)
 1. [时至今日，你已经完全适应了macOS Big Sur的整体界面设计了吗？](https://www.zhihu.com/question/445159708)
-1. [如果能见到你最喜欢的作家，你会干什么？](https://www.zhihu.com/question/400248000)
 1. [2022法硕该怎么准备?](https://www.zhihu.com/question/426080698)
-1. [假如你来写《斗罗大陆 5》你会怎么写？](https://www.zhihu.com/question/429101615)
-1. [如何忘掉一个爱了很久的女孩子？](https://www.zhihu.com/question/441164928)
 1. [一百万个诸葛亮在一起，他们可以北伐成功吗？](https://www.zhihu.com/question/445479938)
 1. [如何看待刺死女儿 9 岁同桌男子被执行死刑？](https://www.zhihu.com/question/445417919)
-1. [硕士论文写不出来，严重焦虑，怎么办？](https://www.zhihu.com/question/437644547)
-1. [男生让女生最心动的瞬间是什么？](https://www.zhihu.com/question/308303577)
 1. [是不是每个人都会有一个藏在心里的人?](https://www.zhihu.com/question/444600132)
 1. [《创造营2021》选手AK刘璋在节目中的说唱水平能否实现降维打击?](https://www.zhihu.com/question/444963716)
 1. [如何以“小爷我待你这么好，你却要嫁给他？”写一个小说？](https://www.zhihu.com/question/433765421)
@@ -102,7 +110,6 @@
 1. [孙悟空改了生死簿，阎王为什么不改回去？](https://www.zhihu.com/question/444695125)
 1. [《创造营 2021》的导师是不是太宽容了？](https://www.zhihu.com/question/442243360)
 1. [2021 年有哪些比较好的路由器推荐？](https://www.zhihu.com/question/439262156)
-1. [高中生怎么才能快乐？](https://www.zhihu.com/question/444888990)
 1. [快要高考了，自己居然没有紧迫感，该怎么办？](https://www.zhihu.com/question/426421367)
 1. [猫猫穷养，有什么必需品值得推荐？](https://www.zhihu.com/question/394076562)
 1. [心里难受的时候，没人可以诉说，应该怎么办？](https://www.zhihu.com/question/437696055)
@@ -110,7 +117,6 @@
 1. [《奇葩说》第七季第十八期辩题「20岁有个一夜成名的机会，该不该要？」，你怎么选？](https://www.zhihu.com/question/445274727)
 1. [如何看待服务员制止浪费被怼「管得着吗」？顾客点菜过多服务员该不该提醒？](https://www.zhihu.com/question/445338774)
 1. [如何以“皇上终于翻了我的绿头牌”为开头，写一个故事？](https://www.zhihu.com/question/444251691)
-1. [考研英语只背单词+死磕真题可以吗？](https://www.zhihu.com/question/271290200)
 1. [有没有特别治愈的句子？](https://www.zhihu.com/question/441984459)
 1. [吕后死后，到底是功臣在作乱还是诸吕在作乱。为什么周勃陈平杀了汉少帝和汉惠帝的其他儿子还能成为忠臣典范？](https://www.zhihu.com/question/413362675)
 1. [电动汽车比传统汽车更适合作为自动驾驶汽车吗？](https://www.zhihu.com/question/47045674)
