--- a/archives/2021-02-25.md
+++ b/archives/2021-02-25.md
@@ -1,58 +1,67 @@
 # 2021-02-25
 
-共 100 条
+共 109 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Thu Feb 25 2021 10:11:04 GMT+0800 (CST) -->
-1. [看《你好，李焕英》时孩子哭得稀里哗啦，但是回家后也没多刷一个碗，说两句，还一样顶嘴，为什么呢？](https://www.zhihu.com/question/444936831)
-1. [员工实名举报中国人寿大量造假，真实情况可能是怎样的？这一现象在保险行业普遍吗？](https://www.zhihu.com/question/446063707)
+<!-- 最后更新时间 Thu Feb 25 2021 11:01:25 GMT+0800 (CST) -->
 1. [如何看待人社部回应：「国内企业加班较多，不具备推行每周2.5天假期基础」？](https://www.zhihu.com/question/446107907)
+1. [员工实名举报中国人寿大量造假，真实情况可能是怎样的？这一现象在保险行业普遍吗？](https://www.zhihu.com/question/446063707)
 1. [看了《明朝那些事》，朱元璋农民出身应该更懂人间疾苦，为啥那么残忍？](https://www.zhihu.com/question/445746439)
-1. [如何看待年后基金大规模下跌，明星基金经理粉丝后援动摇现象，普通投资者该如何投资基金？](https://www.zhihu.com/question/446059068)
+1. [看《你好，李焕英》时孩子哭得稀里哗啦，但是回家后也没多刷一个碗，说两句，还一样顶嘴，为什么呢？](https://www.zhihu.com/question/444936831)
 1. [为什么我感觉有的猪肉熟了会有股刺鼻到让人想吐的臭味（不是变质的那种），但别人却感觉不到？](https://www.zhihu.com/question/328620473)
 1. [我献了400毫升血被我妈知道了，狠骂了我一顿，我想知道女生献血到底会不会对身体造成伤害？](https://www.zhihu.com/question/433360504)
 1. [为什么男生分手后很快就释怀了，女生则需要很久很久？](https://www.zhihu.com/question/432503865)
 1. [有哪些中国人觉得稀松平常，外国人无法理解的事?](https://www.zhihu.com/question/435879884)
+1. [将时间回溯一小时（冷却时间1小时）和预知未来一小时（无冷却）之间你会选择哪种超能力？为什么？](https://www.zhihu.com/question/445318653)
 1. [在当今还有像钱钟书和杨绛那种灵魂伴侣吗？](https://www.zhihu.com/question/445056665)
 1. [如何看待2021年2月24号A股大跌？](https://www.zhihu.com/question/446108931)
 1. [媒体称江西永丰县残联鉴定「小马云」系二级智力残疾，可享受生活补贴、护理补贴，你怎么看待此事？](https://www.zhihu.com/question/446158560)
-1. [将时间回溯一小时（冷却时间1小时）和预知未来一小时（无冷却）之间你会选择哪种超能力？为什么？](https://www.zhihu.com/question/445318653)
-1. [如何看待上海抽检奶茶店全部存在问题，怎样保证食品卫生安全？](https://www.zhihu.com/question/446069196)
-1. [日本制造的质量真的就那么好吗？](https://www.zhihu.com/question/335156490)
+1. [如何看待导演为《哪吒重生》着急？](https://www.zhihu.com/question/445710674)
+1. [如何看待男子请求武汉政府「分配对象」被拒，婚恋难已成为普遍的社会问题了吗？](https://www.zhihu.com/question/446131446)
+1. [如何看待年后基金大规模下跌，明星基金经理粉丝后援动摇现象，普通投资者该如何投资基金？](https://www.zhihu.com/question/446059068)
 1. [如何看待市民举报「民警过年期间公车私用去买烤鸭」，官方回应「系处理完公务后为值班民警购买晚餐」？](https://www.zhihu.com/question/445993971)
 1. [如何看待重庆 13 岁少年擅自用压岁钱文身被武校拒收，家长要求店家担责？为什么不建议未成年文身？](https://www.zhihu.com/question/445890042)
-1. [如何看待2021河南省公务员考试公告及职位表？](https://www.zhihu.com/question/441998633)
-1. [如何评价《科幻世界》2021年02期银河奖征文《无主》（李卿之）全文抄袭斯蒂芬金的《重型卡车》？](https://www.zhihu.com/question/446067657)
+1. [日本制造的质量真的就那么好吗？](https://www.zhihu.com/question/335156490)
+1. [如何看待上海抽检奶茶店全部存在问题，怎样保证食品卫生安全？](https://www.zhihu.com/question/446069196)
 1. [自己长得很普通，对象长得很好看怎么办?](https://www.zhihu.com/question/442303033)
-1. [如果卡普、青雉、赤犬、黄猿同时邀请你做他的学生兼下属，你会选择谁？](https://www.zhihu.com/question/445807112)
-1. [恋爱中你犯过哪些错？](https://www.zhihu.com/question/439563652)
+1. [如何看待2021河南省公务员考试公告及职位表？](https://www.zhihu.com/question/441998633)
+1. [截至去年底超 1800 人牺牲在脱贫攻坚一线，你对他们有什么想说的？你还了解哪些脱贫故事？](https://www.zhihu.com/question/446074222)
 1. [雍正放过曾静，乾隆为什么登基之后又把曾静凌迟？](https://www.zhihu.com/question/445755885)
-1. [如何评价张艺谋导演的《长城》？](https://www.zhihu.com/question/319452692)
+1. [恋爱中你犯过哪些错？](https://www.zhihu.com/question/439563652)
+1. [2 月 25 日早上滴滴崩了，你上班迟到了吗？有哪些替代 App？](https://www.zhihu.com/question/446246909)
+1. [你敢用一年时间改变自己吗？](https://www.zhihu.com/question/437098355)
+1. [如果卡普、青雉、赤犬、黄猿同时邀请你做他的学生兼下属，你会选择谁？](https://www.zhihu.com/question/445807112)
+1. [第一次去女朋友家，拿什么东西合适？需要很昂贵吗？](https://www.zhihu.com/question/335168600)
 1. [鞠婧祎的眼妆是怎么画的?](https://www.zhihu.com/question/303394696)
 1. [有失望至极的句子吗？](https://www.zhihu.com/question/339068772)
-1. [你敢用一年时间改变自己吗？](https://www.zhihu.com/question/437098355)
-1. [第一次去女朋友家，拿什么东西合适？需要很昂贵吗？](https://www.zhihu.com/question/335168600)
-1. [如何看待导演为《哪吒重生》着急？](https://www.zhihu.com/question/445710674)
-1. [在眼镜发明之前，近视了的人是怎样生活的？](https://www.zhihu.com/question/20057134)
-1. [考研人数逐年递增，你为什么选择考研？是什么让你坚定了考研的决心？](https://www.zhihu.com/question/445892304)
 1. [烘干机使用一年后你还会封阳台吗？烘干机一年或几个月的使用感怎样?](https://www.zhihu.com/question/426305815)
-1. [分手了，有必要做朋友吗？](https://www.zhihu.com/question/445595249)
+1. [考研人数逐年递增，你为什么选择考研？是什么让你坚定了考研的决心？](https://www.zhihu.com/question/445892304)
 1. [当老师进入教室发现黑板没擦，老师该怎么做最好？](https://www.zhihu.com/question/439153083)
+1. [如何以「我是琴棋书画样样不行的公主」为开头写一个故事？](https://www.zhihu.com/question/403319494)
+1. [如何评价《科幻世界》2021年02期银河奖征文《无主》（李卿之）全文抄袭斯蒂芬金的《重型卡车》？](https://www.zhihu.com/question/446067657)
+1. [全员编程的时代，我是不是应该放弃这条路？](https://www.zhihu.com/question/445562404)
 1. [阿迪达斯旗下都有哪些系列鞋款？](https://www.zhihu.com/question/28145748)
-1. [如何看待将于2月23日发布的奔驰全新C级，动力系统将全系电气化？](https://www.zhihu.com/question/445393919)
-1. [不是很熟的同学跟你借钱，你会借吗？](https://www.zhihu.com/question/445561963)
-1. [刘雨昕有什么样的魅力，为什么那么多人喜欢她？](https://www.zhihu.com/question/429215902)
-1. [如何看待杨超越代言麦当劳「轻盈夏巴特」系列？](https://www.zhihu.com/question/445911384)
-1. [有那些好习惯需要养成？](https://www.zhihu.com/question/431242009)
+1. [如何评价张艺谋导演的《长城》？](https://www.zhihu.com/question/319452692)
 1. [新手老师怎么做才能不凶学生又能管住学生？](https://www.zhihu.com/question/429786632)
+1. [怎么样慢慢忘记一个人？](https://www.zhihu.com/question/444259535)
+1. [有那些好习惯需要养成？](https://www.zhihu.com/question/431242009)
+1. [请问怎么才能忘记一个人？](https://www.zhihu.com/question/441669768)
+1. [刘雨昕有什么样的魅力，为什么那么多人喜欢她？](https://www.zhihu.com/question/429215902)
+1. [你们觉得，30岁不结婚，可怕吗？](https://www.zhihu.com/question/444143907)
+1. [历经8年，成功让近1亿贫困人口实现脱贫。中国的「战贫之路」到底有多艰难？](https://www.zhihu.com/question/446159337)
+1. [为什么游戏公司总是不愿意出面解释自己的决策？](https://www.zhihu.com/question/445577735)
+1. [如何看待杨超越代言麦当劳「轻盈夏巴特」系列？](https://www.zhihu.com/question/445911384)
 1. [哪一秒你觉得合租真难受？](https://www.zhihu.com/question/294243719)
 1. [张伯礼称三月初是国内疫情拐点，年底有望恢复到疫情前状态，你有哪些期待？](https://www.zhihu.com/question/446090361)
+1. [你的爸妈说从来不重男轻女，但是实际行动重男轻女你会怎么办？](https://www.zhihu.com/question/310819346)
+1. [在眼镜发明之前，近视了的人是怎样生活的？](https://www.zhihu.com/question/20057134)
+1. [分手了，有必要做朋友吗？](https://www.zhihu.com/question/445595249)
+1. [如何看待将于2月23日发布的奔驰全新C级，动力系统将全系电气化？](https://www.zhihu.com/question/445393919)
+1. [不是很熟的同学跟你借钱，你会借吗？](https://www.zhihu.com/question/445561963)
 1. [为什么现在总鼓励年轻人正面刚？](https://www.zhihu.com/question/440608876)
 1. [如何看待 PDD 凌晨长文回应假赛传闻「我从未参与/组织假赛，以前没有，现在没有，未来也不会有」？](https://www.zhihu.com/question/446071263)
-1. [为什么游戏公司总是不愿意出面解释自己的决策？](https://www.zhihu.com/question/445577735)
 1. [如何评价动画《那年那兔那些事儿》？](https://www.zhihu.com/question/28543439)
 1. [人们看电影的意义是什么？](https://www.zhihu.com/question/27933396)
-1. [你的爸妈说从来不重男轻女，但是实际行动重男轻女你会怎么办？](https://www.zhihu.com/question/310819346)
 1. [什么是考研调剂，如何在调剂中争取最好的结果？](https://www.zhihu.com/question/362369867)
 1. [如何让5岁的孩子理解“不是她想要什么就必须得到或者拥有”?](https://www.zhihu.com/question/440219401)
 1. [分手了你还会去窥探前任的生活吗？](https://www.zhihu.com/question/267660529)
