--- a/archives/2021-03-06.md
+++ b/archives/2021-03-06.md
@@ -1,9 +1,9 @@
 # 2021-03-06
 
-共 162 条
+共 167 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Mar 06 2021 18:01:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Mar 06 2021 19:01:18 GMT+0800 (China Standard Time) -->
 1. [如何看待我国2021年军费开支比去年增长6.8%，该数据意味着什么？](https://www.zhihu.com/question/447716140)
 1. [为什么日本总是点错科技树?](https://www.zhihu.com/question/327279221)
 1. [如何看待政协委员建议「应届生身份保留年限延长至5年」？](https://www.zhihu.com/question/447845568)
@@ -13,51 +13,60 @@
 1. [如何看待 2021 年《英雄联盟》LPL 职业联赛摆烂队伍过多及比赛质量严重下降的现状？](https://www.zhihu.com/question/447627103)
 1. [美媒曝拜登因「现场有妇女儿童」紧急叫停第二轮对叙空袭，对此你怎么看？](https://www.zhihu.com/question/447793558)
 1. [如何看待爆款游戏《原神》出品公司米哈游投资上海瑞金医院的脑机接口研究？](https://www.zhihu.com/question/447650697)
-1. [如何评价《奇葩说》第七季傅首尔获得 BBking？](https://www.zhihu.com/question/447873653)
+1. [如何评价迪士尼动画电影《寻龙传说》？](https://www.zhihu.com/question/447497828)
 1. [父亲肺癌晚期，该不该倾家荡产去治疗？](https://www.zhihu.com/question/446433748)
+1. [如何评价《奇葩说》第七季傅首尔获得 BBking？](https://www.zhihu.com/question/447873653)
 1. [如何看待南京德云社的“德”字因为少一横遭女游客怒斥？](https://www.zhihu.com/question/447490432)
 1. [如何看待上海首家肯德基食物银行遭老人哄抢，如何才能让真正有需要食物的人参与该活动，避免被哄抢？](https://www.zhihu.com/question/447677596)
-1. [如何评价迪士尼动画电影《寻龙传说》？](https://www.zhihu.com/question/447497828)
-1. [部队的伙食真的很好吗？大锅饭能有多好？](https://www.zhihu.com/question/441827814)
-1. [如何看待华东政法大学新学期跑步要求：单次 12 分钟内打卡有效，男生 2 公里女生 1.5 公里？](https://www.zhihu.com/question/447170542)
-1. [月薪 2 万~ 3 万元是一种怎样的人生体验？](https://www.zhihu.com/question/50186945)
-1. [如何评价阿里员工发文《致阿里》：我想偷懒驴之常情，你不想我偷懒人之常情，但不能一边抽我一边让我爱你？](https://www.zhihu.com/question/447760592)
 1. [如何看待《原神》5个月全球收入 8.74 亿美元，成为全球收入最高的 RPG 移动版游戏？](https://www.zhihu.com/question/447699190)
+1. [部队的伙食真的很好吗？大锅饭能有多好？](https://www.zhihu.com/question/441827814)
+1. [月薪 2 万~ 3 万元是一种怎样的人生体验？](https://www.zhihu.com/question/50186945)
+1. [如何看待华东政法大学新学期跑步要求：单次 12 分钟内打卡有效，男生 2 公里女生 1.5 公里？](https://www.zhihu.com/question/447170542)
+1. [如何评价阿里员工发文《致阿里》：我想偷懒驴之常情，你不想我偷懒人之常情，但不能一边抽我一边让我爱你？](https://www.zhihu.com/question/447760592)
+1. [如何看待人大代表建议缩短教育学制：初中 3 年、高中 2 年？](https://www.zhihu.com/question/447858027)
 1. [如何评价《进击的巨人》第138话?](https://www.zhihu.com/question/447831579)
 1. [你后悔读研究生吗？](https://www.zhihu.com/question/28347397)
 1. [事业单位如何上岸？](https://www.zhihu.com/question/345511835)
 1. [成都一家幼儿园被曝给孩子吃全素食，教育局已督促该园按规定改进膳食供应，吃素食会对孩子饮食产生哪些影响？](https://www.zhihu.com/question/447866527)
 1. [你觉得《山河令》目前为止算爆了吗？](https://www.zhihu.com/question/446959985)
 1. [男士有什么好打理又好看的发型（除寸头外）？](https://www.zhihu.com/question/34812534)
-1. [你在辩论赛赛场上听到最惊艳的话是什么？](https://www.zhihu.com/question/442060907)
-1. [你们觉得《山河令》中的周子舒角色怎么样？](https://www.zhihu.com/question/447088341)
-1. [如何看待刘亦菲《花木兰》提名第46届土星奖最佳女主角？](https://www.zhihu.com/question/447701771)
 1. [如何看待雷军建议出台手机等设备适老标准，针对老年人用手机的难点，你有什么建议？](https://www.zhihu.com/question/447868213)
-1. [喜欢你的人真的可以忍住不找你吗？](https://www.zhihu.com/question/433052807)
+1. [你在辩论赛赛场上听到最惊艳的话是什么？](https://www.zhihu.com/question/442060907)
 1. [女生找男朋友真的看脸吗？](https://www.zhihu.com/question/33267701)
-1. [你曾被哪句文案救赎过？](https://www.zhihu.com/question/447479604)
-1. [21届考研复试是线上还是线下？](https://www.zhihu.com/question/437813658)
+1. [如何看待刘亦菲《花木兰》提名第46届土星奖最佳女主角？](https://www.zhihu.com/question/447701771)
 1. [女朋友是搞科研的，我该如何支持她？](https://www.zhihu.com/question/447336308)
-1. [如何看待一汽丰田官宣新车 ALLION 中文名为“亚洲狮”？](https://www.zhihu.com/question/447256290)
-1. [为什么《明日方舟》能和《彩虹六号》联动而《少女前线》做不到？](https://www.zhihu.com/question/446546910)
-1. [在《创造营2021》里，韩佩泉（韩美娟）最后能成功出道吗？](https://www.zhihu.com/question/446747728)
-1. [《创造营2021》有哪些值得推荐的冷门选手？](https://www.zhihu.com/question/447489660)
 1. [为什么说女孩子长大后是没有家的？](https://www.zhihu.com/question/374264250)
+1. [如何看待一汽丰田官宣新车 ALLION 中文名为“亚洲狮”？](https://www.zhihu.com/question/447256290)
+1. [王重阳够资格和张三丰达摩齐名吗？](https://www.zhihu.com/question/447379105)
 1. [如何以「我嫁给了竹马的哥哥」开头写一篇故事？](https://www.zhihu.com/question/435103867)
+1. [如何看待有报告称中国女性比男性多 7% 存款，有资管人士表示每次市场大跌女性更容易抄底？你家是怎样的？](https://www.zhihu.com/question/447702845)
+1. [花呗用还是不用好？](https://www.zhihu.com/question/443147918)
+1. [真的要为对象改变自己吗？](https://www.zhihu.com/question/444698890)
+1. [在《创造营2021》里，韩佩泉（韩美娟）最后能成功出道吗？](https://www.zhihu.com/question/446747728)
+1. [喜欢你的人真的可以忍住不找你吗？](https://www.zhihu.com/question/433052807)
+1. [你曾被哪句文案救赎过？](https://www.zhihu.com/question/447479604)
+1. [有哪些娱乐圈明星出圈的照片？](https://www.zhihu.com/question/446535151)
+1. [如何评价 38 节热议短片《致女性的二十六行诗》？](https://www.zhihu.com/question/447715222)
+1. [《原神》将来会不会出pvp？](https://www.zhihu.com/question/432275327)
+1. [为什么 iPhone 还是这么受欢迎？](https://www.zhihu.com/question/430965272)
+1. [中国最厉害的网站建设是哪家公司？](https://www.zhihu.com/question/22810354)
+1. [如何以“我要纳妾”为开头写一个故事？](https://www.zhihu.com/question/438570353)
+1. [如果有个人很喜欢你，而你不喜欢他，你会和他试着谈恋爱吗？](https://www.zhihu.com/question/446463502)
+1. [作为老师，你有哪些hold住学生的妙招？](https://www.zhihu.com/question/364314856)
+1. [你在明白了什么道理后，摄影水平爆发式增长？](https://www.zhihu.com/question/438725584)
+1. [你们觉得《山河令》中的周子舒角色怎么样？](https://www.zhihu.com/question/447088341)
+1. [21届考研复试是线上还是线下？](https://www.zhihu.com/question/437813658)
+1. [为什么《明日方舟》能和《彩虹六号》联动而《少女前线》做不到？](https://www.zhihu.com/question/446546910)
+1. [《创造营2021》有哪些值得推荐的冷门选手？](https://www.zhihu.com/question/447489660)
 1. [哪些句子看一眼就深受触动？](https://www.zhihu.com/question/434160556)
 1. [爱好摄影的你们，都用超广角镜头拍些什么？](https://www.zhihu.com/question/437768691)
 1. [程序员遇到中年危机去大学当老师是出路吗？](https://www.zhihu.com/question/447469652)
 1. [天空这么广阔，为什么要让飞机走航线？](https://www.zhihu.com/question/47230743)
-1. [如何评价 38 节热议短片《致女性的二十六行诗》？](https://www.zhihu.com/question/447715222)
 1. [为什么武磊连打满一场西甲西乙都做不到，是教练不好还是实力不够？](https://www.zhihu.com/question/445369676)
-1. [为什么 iPhone 还是这么受欢迎？](https://www.zhihu.com/question/430965272)
-1. [有哪些娱乐圈明星出圈的照片？](https://www.zhihu.com/question/446535151)
 1. [有哪些适合30岁成熟男性的男装品牌？](https://www.zhihu.com/question/265777777)
 1. [男朋友送了一只口红，我该送什么礼物？](https://www.zhihu.com/question/304702389)
 1. [如果你带着现在的记忆穿越到了《哈利波特》，你会怎样在其他人面前表现呢？](https://www.zhihu.com/question/446575088)
 1. [为什么都在夸新版edge？](https://www.zhihu.com/question/385302999)
-1. [中国最厉害的网站建设是哪家公司？](https://www.zhihu.com/question/22810354)
-1. [《原神》将来会不会出pvp？](https://www.zhihu.com/question/432275327)
 1. [有没有比较骚气的情头？](https://www.zhihu.com/question/264424005)
 1. [心情很丧，不想和别人说话，什么也不想做的时候，你通常怎么办？](https://www.zhihu.com/question/441728050)
 1. [如何看待网上购物总能收到奇葩赠品？](https://www.zhihu.com/question/447749467)
@@ -107,7 +116,6 @@
 1. [如何评价WEY坦克的新LOGO？](https://www.zhihu.com/question/447693450)
 1. [如何看待「先水些 SCI 文章，等有了名利就会认真做科研」这种观点？](https://www.zhihu.com/question/447208754)
 1. [如果两个人在一起不快乐，还有必要坚持吗？](https://www.zhihu.com/question/444490778)
-1. [你在明白了什么道理后，摄影水平爆发式增长？](https://www.zhihu.com/question/438725584)
 1. [有没有很治愈的文案？](https://www.zhihu.com/question/442490819)
 1. [《乘风破浪的姐姐》第二季第七期有哪些值得关注的细节？](https://www.zhihu.com/question/447702009)
 1. [公司准备 3 月 8 日妇女节买礼物，人均 100 以内，送什么礼物呢？](https://www.zhihu.com/question/445284756)
@@ -115,11 +123,9 @@
 1. [2021 年目标为「国内生产总值增长 6% 以上」，释放了哪些信息？](https://www.zhihu.com/question/447676515)
 1. [如何评价美剧《旺达幻视》第九集（大结局）？](https://www.zhihu.com/question/446803617)
 1. [宠物生病，你们会愿意花光积蓄救治吗?](https://www.zhihu.com/question/425005227)
-1. [作为老师，你有哪些hold住学生的妙招？](https://www.zhihu.com/question/364314856)
 1. [如何面对考研失败？考研失败后你明白了哪些道理？](https://www.zhihu.com/question/447520725)
 1. [在图书馆被要微信是种怎样的体验？](https://www.zhihu.com/question/363156843)
 1. [电视剧《巡回检察组》中冯森说「舍得一身剐，才敢干政法」，体现了怎样的情怀？在你眼中，检察官有哪些特质？](https://www.zhihu.com/question/447573255)
-1. [如果有个人很喜欢你，而你不喜欢他，你会和他试着谈恋爱吗？](https://www.zhihu.com/question/446463502)
 1. [如何以【我绑架了天界/魔界的太子】为开头写一篇文？](https://www.zhihu.com/question/440933441)
 1. [后悔的事太多，请问人生可以重来吗?](https://www.zhihu.com/question/446942128)
 1. [你认为《创造营2021》选手伯远出道的可能性大吗？](https://www.zhihu.com/question/445478825)
@@ -127,7 +133,6 @@
 1. [如果让你接受星际战士改造，你希望加入哪个战团呢？](https://www.zhihu.com/question/447312970)
 1. [可以推荐一下你最爱的小说吗？](https://www.zhihu.com/question/421140236)
 1. [如何评价全新傲虎售 31.28 万起，搭载 2.5L 发动机最大功率 169 马力，动力是不是太弱了？](https://www.zhihu.com/question/447556921)
-1. [如何以“我要纳妾”为开头写一个故事？](https://www.zhihu.com/question/438570353)
 1. [郑渊洁小学就退学的儿子，如今怎么样了？](https://www.zhihu.com/question/420244905)
 1. [敷面膜对皮肤真的有好处吗？](https://www.zhihu.com/question/391377441)
 1. [有哪些发朋友圈能把人“笑死”的句子？](https://www.zhihu.com/question/447348553)
