--- a/archives/2021-03-11.md
+++ b/archives/2021-03-11.md
@@ -1,59 +1,73 @@
 # 2021-03-11
 
-共 98 条
+共 110 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Thu Mar 11 2021 11:01:24 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 11 2021 12:02:03 GMT+0800 (China Standard Time) -->
+1. [两会代表清华大学教授孟安明建议，禁止在职中小学老师有偿补课，各类有偿教育服务是否对家庭经济造成负担？](https://www.zhihu.com/question/448419438)
+1. [政协委员钟茂初：「建议乡村教师工资大幅高于城市教师」，对此，你这怎么看？](https://www.zhihu.com/question/448359133)
+1. [如何看待人大代表：建议整顿无底线追星， 艺人走红应靠作品而非流量？你赞同吗？](https://www.zhihu.com/question/448545659)
+1. [人大代表建议适当放宽小学新生入学年龄，当年满 6 周岁即可，你赞同吗？](https://www.zhihu.com/question/448559898)
+1. [人大代表建议推行免费婚检，有哪些意义？婚检是否应该免费或强制？](https://www.zhihu.com/question/448531882)
+1. [人大代表蒋胜男建议，放宽国家公务员报考年龄限制，对此你怎么看？](https://www.zhihu.com/question/447039783)
+1. [人大代表建议将虐待动物纳入治安管理处罚法，实现可能性有多大？如何通过法律法规惩治虐待动物行为？](https://www.zhihu.com/question/448536131)
+1. [政协委员建议人口低于 10 万的小县合并，若实施有哪些利弊？能否解决欠发达县城人口流失问题？](https://www.zhihu.com/question/448537934)
+1. [人大代表建议普通高中录取率提高至 80% 以上，你支持吗？义务教育之后如何满足学生个性化发展？](https://www.zhihu.com/question/448440699)
+1. [如何看待全国政协委员建议「彻底取缔校外培训机构」， 加强监管应该从哪方面发力？](https://www.zhihu.com/question/448474428)
+1. [3月10日明星基金集体反弹，全面大涨，后面发展会怎么样？](https://www.zhihu.com/question/448591120)
+1. [如何评价清华大学《摸鱼学导论》这门课程？](https://www.zhihu.com/question/448630016)
+1. [如何看待华为推出 990E 版的 Mate 40E，并定价 4599 元起?](https://www.zhihu.com/question/448542406)
+1. [菠萝和凤梨有区别吗？](https://www.zhihu.com/question/20788381)
+1. [如何看待河南一女车主坐特斯拉车顶维权，大喇叭播放「Model 3 刹车失灵，一家四口险些丧命」？](https://www.zhihu.com/question/448569872)
+1. [你觉得哪些歌手是真正的有才华的歌手？](https://www.zhihu.com/question/421648239)
+1. [如果有人得了绝症，马上要死了，临死前想知道《名侦探柯南》的结局，青山刚昌会不会告诉这个人？](https://www.zhihu.com/question/448275927)
+1. [作为学习委员，忘记通知同学补考导致直接重修怎么办？](https://www.zhihu.com/question/367786613)
+1. [如何评价热火球员迈耶斯-伦纳德在游戏直播期间使用了种族歧视犹太人的词汇及其后续发展？](https://www.zhihu.com/question/448553060)
+1. [有大神研究过华为P40上的鸿蒙OS 2.0吗？事实它到底是个全新的自主操作系统还是个套壳安卓？](https://www.zhihu.com/question/448136663)
+1. [如何看待「2021 年我国空巢青年数量或升至 9200w」？为什么越来越多年轻人选择独居？](https://www.zhihu.com/question/448562387)
+1. [《王者荣耀》触发 ELO 机制怎么办?](https://www.zhihu.com/question/341453743)
+1. [有人为了不和婆婆住一起而不买大房子吗?](https://www.zhihu.com/question/407531585)
+1. [20-21 赛季欧冠巴黎圣日耳曼 1:1 巴塞罗那，总比分 5:2 晋级八强，如何评价这场比赛？](https://www.zhihu.com/question/448696957)
+1. [公公总是各种言语羞辱婆婆，老公也帮着公公，我应该帮婆婆吗？](https://www.zhihu.com/question/447614786)
+1. [如何看待 2021 年起 LPL 季后赛席位增至 10 支，四强赛启用双败赛制？](https://www.zhihu.com/question/438866948)
+1. [健身练出来的肌肉有力吗？](https://www.zhihu.com/question/447230236)
+1. [政协委员建议警惕影视作品「伪娘化」、追捧小鲜肉，你认同吗？影视作品应该塑造怎样的形象？](https://www.zhihu.com/question/448683996)
+1. [如何评价哈工大某老师不允许实验室硕士出去实习，称「实习无用，就像跟不对等的渣男试婚」？你认同吗？](https://www.zhihu.com/question/448390973)
+1. [米哈游的《原神》在模型动作方面是否达到国产游戏的顶尖水准？](https://www.zhihu.com/question/445670587)
+1. [有没有什么非常适合年轻人的养生方式？](https://www.zhihu.com/question/403881920)
+1. [为什么盲盒和乐高都火了，高达模型在路人里却没火？](https://www.zhihu.com/question/445171544)
+1. [有哪些悄悄发送却能“惊艳所有人”的沙雕文案？](https://www.zhihu.com/question/443152285)
+1. [如何从法律角度理解「蔡徐坤微博转发过亿」幕后推手星援App开发者一审获刑五年？有哪些启示？](https://www.zhihu.com/question/448562224)
+1. [你为什么放弃高薪，跳槽到一家工资低的公司？](https://www.zhihu.com/question/24189294)
+1. [经常用含麝香的香水会导致不孕吗？](https://www.zhihu.com/question/20129126)
+1. [散粉有必要买贵的吗？有哪些推荐？](https://www.zhihu.com/question/46710969)
+1. [你认为《火影忍者》里谁最有男人味？](https://www.zhihu.com/question/447484394)
+1. [如果我有一个永远保持在120℃的方块，能用来做什么？](https://www.zhihu.com/question/448323743)
+1. [如何分辨口臭是口腔问题还是肠胃问题?](https://www.zhihu.com/question/27883412)
+1. [有哪些高性价比的智能家居搭建方案和技巧？](https://www.zhihu.com/question/446971177)
+1. [有没有特别温柔的句子/文案？](https://www.zhihu.com/question/439571782)
+1. [考编最少要准备多久？](https://www.zhihu.com/question/293537613)
+1. [夫妻之间怎么样才能经营好婚姻关系?](https://www.zhihu.com/question/349031552)
+1. [怎样才能写出高质量的SQL语句？](https://www.zhihu.com/question/24460717)
+1. [如何评价《进击的巨人》中的吉克？](https://www.zhihu.com/question/60927899)
+1. [现在除了文员、销售还能做什么工作？](https://www.zhihu.com/question/429496537)
+1. [为什么有的人做事死板不会变通，有的人做事很灵活？](https://www.zhihu.com/question/22947443)
+1. [什么事情是你上了大学后才知道？](https://www.zhihu.com/question/355322953)
+1. [《甄嬛传》最大的赢家是谁？](https://www.zhihu.com/question/285057628)
 1. [如何看待全国政协委员「建议禁止在微信群要求家长改作业」？](https://www.zhihu.com/question/448203861)
 1. [如何看待全国人大代表黎霞建议离婚分割财产时对家暴者少分或不分？](https://www.zhihu.com/question/448382475)
 1. [如何看待全国人大代表「建议严禁宣传中高考状元，建议严禁发布各种中高考排行榜」？](https://www.zhihu.com/question/448195929)
 1. [人大代表建议对教师工资免税，你支持吗？此举能否吸引优秀人才加入教师队伍？](https://www.zhihu.com/question/448361377)
 1. [在你看来，到 2035 年中国可能发生哪些变化？](https://www.zhihu.com/question/447592800)
-1. [政协委员钟茂初：「建议乡村教师工资大幅高于城市教师」，对此，你这怎么看？](https://www.zhihu.com/question/448359133)
-1. [人大代表建议将虐待动物纳入治安管理处罚法，实现可能性有多大？如何通过法律法规惩治虐待动物行为？](https://www.zhihu.com/question/448536131)
-1. [政协委员建议人口低于 10 万的小县合并，若实施有哪些利弊？能否解决欠发达县城人口流失问题？](https://www.zhihu.com/question/448537934)
-1. [人大代表建议推行免费婚检，有哪些意义？婚检是否应该免费或强制？](https://www.zhihu.com/question/448531882)
-1. [如何看待全国政协委员建议「彻底取缔校外培训机构」， 加强监管应该从哪方面发力？](https://www.zhihu.com/question/448474428)
-1. [人大代表建议适当放宽小学新生入学年龄，当年满 6 周岁即可，你赞同吗？](https://www.zhihu.com/question/448559898)
-1. [如何评价清华大学《摸鱼学导论》这门课程？](https://www.zhihu.com/question/448630016)
-1. [如何看待华为推出 990E 版的 Mate 40E，并定价 4599 元起?](https://www.zhihu.com/question/448542406)
-1. [作为学习委员，忘记通知同学补考导致直接重修怎么办？](https://www.zhihu.com/question/367786613)
-1. [如何看待河南一女车主坐特斯拉车顶维权，大喇叭播放「Model 3 刹车失灵，一家四口险些丧命」？](https://www.zhihu.com/question/448569872)
-1. [菠萝和凤梨有区别吗？](https://www.zhihu.com/question/20788381)
-1. [《王者荣耀》触发 ELO 机制怎么办?](https://www.zhihu.com/question/341453743)
-1. [你觉得哪些歌手是真正的有才华的歌手？](https://www.zhihu.com/question/421648239)
-1. [如何评价热火球员迈耶斯-伦纳德在游戏直播期间使用了种族歧视犹太人的词汇及其后续发展？](https://www.zhihu.com/question/448553060)
-1. [如何评价《进击的巨人》中的吉克？](https://www.zhihu.com/question/60927899)
-1. [有大神研究过华为P40上的鸿蒙OS 2.0吗？事实它到底是个全新的自主操作系统还是个套壳安卓？](https://www.zhihu.com/question/448136663)
-1. [如何看待「2021 年我国空巢青年数量或升至 9200w」？为什么越来越多年轻人选择独居？](https://www.zhihu.com/question/448562387)
-1. [如何看待 2021 年起 LPL 季后赛席位增至 10 支，四强赛启用双败赛制？](https://www.zhihu.com/question/438866948)
-1. [有人为了不和婆婆住一起而不买大房子吗?](https://www.zhihu.com/question/407531585)
 1. [《EVA 新福音战士剧场版：终》中为什么明日香不能单身呢？](https://www.zhihu.com/question/448404415)
-1. [20-21 赛季欧冠巴黎圣日耳曼 1:1 巴塞罗那，总比分 5:2 晋级八强，如何评价这场比赛？](https://www.zhihu.com/question/448696957)
-1. [有哪些悄悄发送却能“惊艳所有人”的沙雕文案？](https://www.zhihu.com/question/443152285)
-1. [现在除了文员、销售还能做什么工作？](https://www.zhihu.com/question/429496537)
-1. [如何看待人大代表：建议整顿无底线追星， 艺人走红应靠作品而非流量？你赞同吗？](https://www.zhihu.com/question/448545659)
-1. [两会代表清华大学教授孟安明建议，禁止在职中小学老师有偿补课，各类有偿教育服务是否对家庭经济造成负担？](https://www.zhihu.com/question/448419438)
 1. [全国政协委员李国华建议，对 996 工作制进行监管，应该如何监管才有效？](https://www.zhihu.com/question/448500726)
-1. [政协委员建议警惕影视作品「伪娘化」、追捧小鲜肉，你认同吗？影视作品应该塑造怎样的形象？](https://www.zhihu.com/question/448683996)
-1. [健身练出来的肌肉有力吗？](https://www.zhihu.com/question/447230236)
-1. [你认为《火影忍者》里谁最有男人味？](https://www.zhihu.com/question/447484394)
-1. [米哈游的《原神》在模型动作方面是否达到国产游戏的顶尖水准？](https://www.zhihu.com/question/445670587)
-1. [什么事情是你上了大学后才知道？](https://www.zhihu.com/question/355322953)
-1. [有没有什么非常适合年轻人的养生方式？](https://www.zhihu.com/question/403881920)
-1. [《甄嬛传》最大的赢家是谁？](https://www.zhihu.com/question/285057628)
 1. [如何看待政协委员建议「心理咨询费用纳入医保」？精神心理疾病患病率上升反映了什么问题？](https://www.zhihu.com/question/448413544)
 1. [如何看待人大代表「建议允许退休父母随独生子女落户，并在社保、医保等方面享受与当地居民同等待遇」？](https://www.zhihu.com/question/448360534)
 1. [中国政府宣布启动「春苗行动」，争取为海外同胞接种国产或外国疫苗，你怎么看？](https://www.zhihu.com/question/448217663)
 1. [人大代表建议出台相应政策，更好地保障大学生士兵入伍及留队，对此你怎么看？有什么好想法吗？](https://www.zhihu.com/question/448538549)
-1. [你为什么放弃高薪，跳槽到一家工资低的公司？](https://www.zhihu.com/question/24189294)
 1. [在教育孩子的过程中，你觉得最好的教育观念是什么？](https://www.zhihu.com/question/442433746)
 1. [如何看待《山河令》剧情里有很多同原著作者小说《杀破狼》的梗？](https://www.zhihu.com/question/448461343)
 1. [买什么手表可以花少少钱戴出大大富贵感?](https://www.zhihu.com/question/415690787)
-1. [公公总是各种言语羞辱婆婆，老公也帮着公公，我应该帮婆婆吗？](https://www.zhihu.com/question/447614786)
-1. [散粉有必要买贵的吗？有哪些推荐？](https://www.zhihu.com/question/46710969)
-1. [有没有特别温柔的句子/文案？](https://www.zhihu.com/question/439571782)
-1. [为什么有的人做事死板不会变通，有的人做事很灵活？](https://www.zhihu.com/question/22947443)
 1. [如何看待全国人大代表建议推行免费婚检？你认为必须强制婚检吗？](https://www.zhihu.com/question/448556408)
 1. [一高校教授让学生改微信名以便备注，因为「没有改学生备注的习惯」，你觉得情有可原还是不太妥当？](https://www.zhihu.com/question/447768082)
 1. [2021 年劳动节 5 月1 日至 5 日放假共 5 天，你有哪些计划和安排？](https://www.zhihu.com/question/448603091)
@@ -67,7 +81,6 @@
 1. [如何评价《海贼王》漫画 第1007话情报？](https://www.zhihu.com/question/448495593)
 1. [当孩子问为什么看不见空气的时候，我要怎么回答他？](https://www.zhihu.com/question/447360931)
 1. [有什么适合独自一人观看的电影？](https://www.zhihu.com/question/31772302)
-1. [人大代表建议普通高中录取率提高至 80% 以上，你支持吗？义务教育之后如何满足学生个性化发展？](https://www.zhihu.com/question/448440699)
 1. [项目管理的前路，前辈能给一些意见吗？](https://www.zhihu.com/question/35563186)
 1. [如果你的下属不服从你得管理，你会怎么办？](https://www.zhihu.com/question/325156471)
 1. [剪辑师应该怎样训练自己的剪辑思维？](https://www.zhihu.com/question/299238934)
@@ -78,7 +91,6 @@
 1. [你的名字都怎么被人调侃过？](https://www.zhihu.com/question/56961231)
 1. [女性朋友之间的相处模式是怎样的？她们给你带来了哪些支持和力量？](https://www.zhihu.com/question/447555098)
 1. [怀孕了有必要那么小心吗？](https://www.zhihu.com/question/27690623)
-1. [人大代表蒋胜男建议，放宽国家公务员报考年龄限制，对此你怎么看？](https://www.zhihu.com/question/447039783)
 1. [如何评价小米10s，有哪些亮点和不足？](https://www.zhihu.com/question/448239993)
 1. [怎样才能提高自己逻辑思维的能力？](https://www.zhihu.com/question/333617763)
 1. [不请专业公司，自己能有效去除甲醛、苯的污染吗？](https://www.zhihu.com/question/35664576)
