--- a/archives/2021-03-14.md
+++ b/archives/2021-03-14.md
@@ -1,9 +1,9 @@
 # 2021-03-14
 
-共 125 条
+共 129 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sun Mar 14 2021 18:01:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Mar 14 2021 19:01:24 GMT+0800 (China Standard Time) -->
 1. [如何看待海口特斯拉工作人员复现也踩不住刹车？](https://www.zhihu.com/question/449227121)
 1. [2021314什么样的文案适合发朋友圈？](https://www.zhihu.com/question/448761958)
 1. [有哪些特征一眼就会被看出是 iPhone 用户？](https://www.zhihu.com/question/357678200)
@@ -11,41 +11,50 @@
 1. [有哪些「知名度不高，质量却很好」的品牌？](https://www.zhihu.com/question/35886615)
 1. [家里人想让我读博去大学当老师，这条路可行吗？](https://www.zhihu.com/question/448393868)
 1. [讲真，应届生一般工资多少啊？](https://www.zhihu.com/question/58570383)
-1. [如何评价《怦然再心动》里和王子文约会的男嘉宾吴永恩?](https://www.zhihu.com/question/448054194)
-1. [时隔 11 年电影《阿凡达》重映再次成为影史全球票房冠军，对于当前的电影行业而言实至名归吗？](https://www.zhihu.com/question/448750459)
 1. [怎么评价这次KFC与《原神》的联动?](https://www.zhihu.com/question/449051034)
-1. [王子文承认已育有一子，你有什么想说的？这会对她的事业和感情有哪些影响？](https://www.zhihu.com/question/449204610)
+1. [时隔 11 年电影《阿凡达》重映再次成为影史全球票房冠军，对于当前的电影行业而言实至名归吗？](https://www.zhihu.com/question/448750459)
+1. [如何评价《怦然再心动》里和王子文约会的男嘉宾吴永恩?](https://www.zhihu.com/question/448054194)
 1. [出生在有钱人家什么感觉?](https://www.zhihu.com/question/384673502)
+1. [2021314 白色情人节，你是怎么过的？一个人还是两个人？](https://www.zhihu.com/question/449247321)
 1. [头发很贴很重很塌的人怎么让头顶看起来蓬松？](https://www.zhihu.com/question/20340797)
 1. [如何评价陈小纭在《乘风破浪的姐姐2》中的表现?](https://www.zhihu.com/question/440631683)
 1. [如何看待女辅警敲诈公职人员一案刑事判决书从网上撤回？案件合理公开程序应该是什么样的？](https://www.zhihu.com/question/449028350)
 1. [有哪些知名电影里特效制作难度很高的镜头，却很少有人注意到？](https://www.zhihu.com/question/448466173)
 1. [《咒术回战》真的配得上他现在的热度吗？](https://www.zhihu.com/question/444766202)
 1. [为什么我从网络游戏中获得的快乐不如在单机游戏中获得快乐多?](https://www.zhihu.com/question/448970693)
+1. [王子文承认已育有一子，你有什么想说的？这会对她的事业和感情有哪些影响？](https://www.zhihu.com/question/449204610)
 1. [五月份显卡会恢复正常价格吗？](https://www.zhihu.com/question/445365770)
 1. [六大茶类，哪种茶最健康？](https://www.zhihu.com/question/57244114)
-1. [有哪些委屈到极致的文案？](https://www.zhihu.com/question/409977257)
 1. [有哪些适合学生党在宿舍里屯的零食？](https://www.zhihu.com/question/448401945)
 1. [大学校园网是否应该保障网络游戏需求？](https://www.zhihu.com/question/448635700)
+1. [《斗破苍穹》是不是去掉斗尊境界会更好?](https://www.zhihu.com/question/448921615)
 1. [会飞这个超能力会不会显得很鸡肋?](https://www.zhihu.com/question/407617594)
-1. [为什么现在很多人还不接受虚拟币？](https://www.zhihu.com/question/446646495)
-1. [一个不是很了解CS（计算机科学）的人，该从哪里开始自学CS？](https://www.zhihu.com/question/380375631)
-1. [你摘抄过什么句子？](https://www.zhihu.com/question/314121506)
 1. [在EVA《新世纪福音战士》的世界里，为什么科技已经发展到那个程度了，EVA却还需要接电缆？](https://www.zhihu.com/question/424928782)
-1. [谈恋爱谈的次数多有什么用？](https://www.zhihu.com/question/334622048)
-1. [大家怎么评价《山河令》的片头曲《天问》？](https://www.zhihu.com/question/447864997)
-1. [为什么说 goto 是一种不好的用法？](https://www.zhihu.com/question/20259336)
-1. [初一初二没学好，初三还有希望考上高中吗？](https://www.zhihu.com/question/439552373)
+1. [为什么现在很多人还不接受虚拟币？](https://www.zhihu.com/question/446646495)
+1. [你摘抄过什么句子？](https://www.zhihu.com/question/314121506)
+1. [高三能有多大潜力？](https://www.zhihu.com/question/62520919)
+1. [每天都不吃早饭会瘦吗？](https://www.zhihu.com/question/446503998)
+1. [有哪些委屈到极致的文案？](https://www.zhihu.com/question/409977257)
+1. [一个不是很了解CS（计算机科学）的人，该从哪里开始自学CS？](https://www.zhihu.com/question/380375631)
 1. [大连理工大学学生「支教保研时辱骂、歧视农村学生」，被取消研究生入学资格，是否合理？支教老师有哪些责任？](https://www.zhihu.com/question/449089292)
 1. [懂手机的人去实体店买手机是什么体验？](https://www.zhihu.com/question/442650451)
-1. [为什么婆婆对媳妇很好媳妇还特抵触?](https://www.zhihu.com/question/446933492)
 1. [百香果女孩家属被退赔凶手抢走的 32 元，家属还有可能争取到更多的赔偿吗？](https://www.zhihu.com/question/449138131)
-1. [生活是要努力还是随心所欲？](https://www.zhihu.com/question/445846632)
-1. [你的室友有哪一刻恶心到你了？](https://www.zhihu.com/question/356119656)
-1. [怎么看待 QGhappy.Fly 飞牛无法首发？](https://www.zhihu.com/question/449051540)
-1. [如何看待哈里夫妇上节目吐槽王室涉种族歧视，生活压抑，英国王室首次回应为其经历感到难过，将解决种族问题？](https://www.zhihu.com/question/448584950)
 1. [贵州茅台2000的话适合抄底吗?](https://www.zhihu.com/question/445691261)
+1. [谈恋爱谈的次数多有什么用？](https://www.zhihu.com/question/334622048)
+1. [为什么说 goto 是一种不好的用法？](https://www.zhihu.com/question/20259336)
+1. [如何看待哈里夫妇上节目吐槽王室涉种族歧视，生活压抑，英国王室首次回应为其经历感到难过，将解决种族问题？](https://www.zhihu.com/question/448584950)
+1. [大家怎么评价《山河令》的片头曲《天问》？](https://www.zhihu.com/question/447864997)
+1. [为什么婆婆对媳妇很好媳妇还特抵触?](https://www.zhihu.com/question/446933492)
+1. [初一初二没学好，初三还有希望考上高中吗？](https://www.zhihu.com/question/439552373)
+1. [你的室友有哪一刻恶心到你了？](https://www.zhihu.com/question/356119656)
 1. [给诸葛亮提供一百万个大学生，北伐可以成功吗？](https://www.zhihu.com/question/443277138)
+1. [你摘抄过哪些自认为有哲理的句子？](https://www.zhihu.com/question/447471891)
+1. [LeetCode按照怎样的顺序来刷题比较好？](https://www.zhihu.com/question/36738189)
+1. [二婚真的会遇到真爱吗？](https://www.zhihu.com/question/427960636)
+1. [怎么看待 QGhappy.Fly 飞牛无法首发？](https://www.zhihu.com/question/449051540)
+1. [有没有什么高质量的虐文 ？](https://www.zhihu.com/question/438735007)
+1. [你觉得减肥难的原因是什么？](https://www.zhihu.com/question/444589508)
+1. [生活是要努力还是随心所欲？](https://www.zhihu.com/question/445846632)
 1. [《山河令》目前看来可能烂尾吗？](https://www.zhihu.com/question/448992898)
 1. [如何看待价值 15 万清代龙袍报关申报为「棉质刺绣女装上衣」被海关查获？相关人员承担哪些法律责任？](https://www.zhihu.com/question/448701359)
 1. [我们拼命努力挣钱到底是为了什么?](https://www.zhihu.com/question/448291367)
@@ -53,15 +62,10 @@
 1. [怎么快速提高《行测》中的图形推理题？](https://www.zhihu.com/question/300875689)
 1. [美股有多大可能在2021年上半年崩盘？](https://www.zhihu.com/question/447024407)
 1. [如何评价 2021 年上半年教师资格证综合素质一科？](https://www.zhihu.com/question/449085143)
-1. [你觉得减肥难的原因是什么？](https://www.zhihu.com/question/444589508)
 1. [2021314 有哪些一见倾心的表白文案？](https://www.zhihu.com/question/449063807)
 1. [C盘快满了不敢乱删，请问该如何清理？](https://www.zhihu.com/question/379384714)
-1. [有没有什么高质量的虐文 ？](https://www.zhihu.com/question/438735007)
 1. [你做律师是因为自己真正的喜欢吗？](https://www.zhihu.com/question/447881795)
-1. [二婚真的会遇到真爱吗？](https://www.zhihu.com/question/427960636)
-1. [你摘抄过哪些自认为有哲理的句子？](https://www.zhihu.com/question/447471891)
 1. [请问车子有没有必要去4S店保养?](https://www.zhihu.com/question/430070457)
-1. [LeetCode按照怎样的顺序来刷题比较好？](https://www.zhihu.com/question/36738189)
 1. [普通话二甲难考吗？](https://www.zhihu.com/question/296008893)
 1. [如何评价《秦时明月之沧海横流》第二十六集(速观沧海：田言篇)？](https://www.zhihu.com/question/448725214)
 1. [如何评价《还珠格格》里的夏紫薇？](https://www.zhihu.com/question/288060468)
